--- a/Blackjack2/Blackjack2.vcxproj
+++ b/Blackjack2/Blackjack2.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Dealer.cpp" />
     <ClCompile Include="Deck.cpp" />
     <ClCompile Include="ErrorCatching.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Play.cpp" />
     <ClCompile Include="Player.cpp" />
