--- a/Blackjack2/Blackjack2.vcxproj.filters
+++ b/Blackjack2/Blackjack2.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Deck.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Play.h">
