--- a/Blackjack2/Blackjack2.vcxproj
+++ b/Blackjack2/Blackjack2.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Deck.cpp" />
     <ClCompile Include="ErrorCatching.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Outcomes.cpp" />
     <ClCompile Include="Play.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Score.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Dealer.h" />
     <ClInclude Include="Deck.h" />
     <ClInclude Include="ErrorCatching.h" />
+    <ClInclude Include="Outcomes.h" />
     <ClInclude Include="Play.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Score.h" />
