--- a/Blackjack2/Blackjack2.vcxproj.filters
+++ b/Blackjack2/Blackjack2.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Deck.cpp">
       <Filter>Source Files\Core</Filter>
     </ClCompile>
+    <ClCompile Include="Outcomes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Play.h">
@@ -91,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="Deck.h">
       <Filter>Header Files\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="Outcomes.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
